--- a/TheGameOfNim/Pages/Index.cshtml
+++ b/TheGameOfNim/Pages/Index.cshtml
@@ -4,7 +4,8 @@
     ViewData["Title"] = "Home page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">The Game Of Nim</h1>
-    <p></p>
+
+<div class="text-center" style="width:500px;height:750px;background:#63BDFF;margin-top:50px; margin-left:400px">
+    <h1 class="display-4" style="color: white;">The Game Of Nim</h1>
+    
 </div>
