Pixel Font Functional
The pixel font works in the site now

--- a/TheGameOfNim/Pages/Index.cshtml
+++ b/TheGameOfNim/Pages/Index.cshtml
@@ -5,6 +5,12 @@
 }
 
 
+<head>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
+</head>
+
 <div class="text-center" style="width:500px;height:750px;background:#63BDFF;margin-top:50px; margin-left:400px">
     <h1 class="display-4" style="color: white;">The Game Of Nim</h1>
     
