--- a/TheGameOfNim/wwwroot/css/site.css
+++ b/TheGameOfNim/wwwroot/css/site.css
@@ -1,11 +1,11 @@
 html {
-  font-size: 14px;
+    font-size: 14px;
 }
 
 @media (min-width: 768px) {
-  html {
-    font-size: 16px;
-  }
+    html {
+        font-size: 16px;
+    }
 }
 
 html {
@@ -15,4 +15,13 @@ html {
 
 body {
   margin-bottom: 60px;
+}
+
+h1 {
+    font-family: 'Press Start 2P';
+}
+.press-start 2p-regular {
+    font-family: "Press Start 2P", system-ui;
+    font-weight: 400;
+    font-style: normal;
 }
